--- a/manifest.json
+++ b/manifest.json
@@ -8,6 +8,16 @@
   "theme_color": "#595f43",
   "icons": [
     {
+      "src": "/images/logo72.png",
+      "type": "image/png",
+      "sizes": "72x72"
+    },
+    {
+      "src": "/images/logo128.png",
+      "type": "image/png",
+      "sizes": "128x128"
+    },
+    {
       "src": "/images/logo144.png",
       "type": "image/png",
       "sizes": "144x144"
@@ -20,13 +30,10 @@
     {
       "src": "/images/logo192.png",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "192x192",
+      "purpose": "maskable"
     },
-    {
-      "src": "/images/logo384.png",
-      "type": "image/png",
-      "sizes": "384x384"
-    },
+
     {
       "src": "/images/logo512.png",
       "type": "image/png",
